// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages fareType should render correctly 1`] = `
<TwoThirdsLayout
  description="Fare Type selection page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Type - Create Fares Data Service "
>
  <CsrfForm
    action="/api/fareType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="fare-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="fare-type-page-heading"
          >
            Select a fare type
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="fare-type-operator-hint"
        >
          Blackpool Transport
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="radio-option-single"
          errors={Array []}
        >
          <RadioButtons
            inputName="fareType"
            options={
              Array [
                Object {
                  "hint": "A ticket for a point to point journey",
                  "label": "Single ticket",
                  "value": "single",
                },
                Object {
                  "hint": "An inbound and outbound ticket for the same service",
                  "label": "Return ticket",
                  "value": "return",
                },
                Object {
                  "hint": "A fixed fee ticket for a single journey",
                  "label": "Flat fare/short hop ticket",
                  "value": "flatFare",
                },
                Object {
                  "hint": "A ticket valid for a number of days, weeks, months or years",
                  "label": "Period ticket",
                  "value": "period",
                },
                Object {
                  "hint": "A bundle of pre-paid tickets",
                  "label": "Carnet ticket",
                  "value": "carnet",
                },
                Object {
                  "hint": "A ticket available to pupils in full-time education",
                  "label": "Academic term/year ticket",
                  "value": "schoolService",
                },
                Object {
                  "hint": "A ticket that covers more than one operator",
                  "label": "Multi-operator",
                  "value": "multiOperator",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages fareType should render correctly for a scheme operator 1`] = `
<TwoThirdsLayout
  description="Fare Type selection page of the Create Fares Data Service"
  errors={Array []}
  title="Fare Type - Create Fares Data Service "
>
  <CsrfForm
    action="/api/fareType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={Array []}
    />
    <div
      className="govuk-form-group "
    >
      <fieldset
        aria-describedby="fare-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="fare-type-page-heading"
          >
            Select a fare type
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="fare-type-operator-hint"
        >
          Blackpool Transport
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="radio-option-single"
          errors={Array []}
        >
          <RadioButtons
            inputName="fareType"
            options={
              Array [
                Object {
                  "hint": "A ticket valid for a number of days, weeks, months or years",
                  "label": "Period ticket",
                  "value": "period",
                },
                Object {
                  "hint": "A bundle of period tickets, each valid for a number of days, weeks, months or years",
                  "label": "Carnet period ticket",
                  "value": "carnetPeriod",
                },
                Object {
                  "hint": "A fixed fee ticket for a single journey",
                  "label": "Flat fare ticket",
                  "value": "flatFare",
                },
                Object {
                  "hint": "A bundle of fixed fee tickets, each for a single journey",
                  "label": "Carnet flat fare ticket",
                  "value": "carnetFlatFare",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;

exports[`pages fareType should render error messaging when errors are passed to the page 1`] = `
<TwoThirdsLayout
  description="Fare Type selection page of the Create Fares Data Service"
  errors={
    Array [
      Object {
        "errorMessage": "Choose a fare type from the options",
        "id": "fare-type-single",
      },
    ]
  }
  title="Fare Type - Create Fares Data Service "
>
  <CsrfForm
    action="/api/fareType"
    csrfToken=""
    method="post"
  >
    <ErrorSummary
      errors={
        Array [
          Object {
            "errorMessage": "Choose a fare type from the options",
            "id": "fare-type-single",
          },
        ]
      }
    />
    <div
      className="govuk-form-group govuk-form-group--error"
    >
      <fieldset
        aria-describedby="fare-type-page-heading"
        className="govuk-fieldset"
      >
        <legend
          className="govuk-fieldset__legend govuk-fieldset__legend--l"
        >
          <h1
            className="govuk-fieldset__heading"
            id="fare-type-page-heading"
          >
            Select a fare type
          </h1>
        </legend>
        <span
          className="govuk-hint"
          id="fare-type-operator-hint"
        >
          Blackpool Transport
        </span>
        <FormElementWrapper
          errorClass="govuk-radios--error"
          errorId="radio-option-single"
          errors={
            Array [
              Object {
                "errorMessage": "Choose a fare type from the options",
                "id": "fare-type-single",
              },
            ]
          }
        >
          <RadioButtons
            inputName="fareType"
            options={
              Array [
                Object {
                  "hint": "A ticket for a point to point journey",
                  "label": "Single ticket",
                  "value": "single",
                },
                Object {
                  "hint": "An inbound and outbound ticket for the same service",
                  "label": "Return ticket",
                  "value": "return",
                },
                Object {
                  "hint": "A fixed fee ticket for a single journey",
                  "label": "Flat fare/short hop ticket",
                  "value": "flatFare",
                },
                Object {
                  "hint": "A ticket valid for a number of days, weeks, months or years",
                  "label": "Period ticket",
                  "value": "period",
                },
                Object {
                  "hint": "A bundle of pre-paid tickets",
                  "label": "Carnet ticket",
                  "value": "carnet",
                },
                Object {
                  "hint": "A ticket available to pupils in full-time education",
                  "label": "Academic term/year ticket",
                  "value": "schoolService",
                },
                Object {
                  "hint": "A ticket that covers more than one operator",
                  "label": "Multi-operator",
                  "value": "multiOperator",
                },
              ]
            }
          />
        </FormElementWrapper>
      </fieldset>
    </div>
    <input
      className="govuk-button"
      id="continue-button"
      type="submit"
      value="Continue"
    />
  </CsrfForm>
</TwoThirdsLayout>
`;
